add crud methods for author
