# model/book.go
@@ -5,9 +5,10 @@ import (
 )
 
 type Book struct {
-	ID          uint      `gorm:"primaryKey" json:"id"`
-	Title       string    `json:"title"`
-	Author      string    `json:"author"`
+	ID          uint   `gorm:"primaryKey" json:"id"`
+	Title       string `json:"title"`
+	AuthorID    uint
+	Author      Author    `json:"author"`
 	Genre       string    `json:"genre"`
 	PublishedAt time.Time `json:"published_at"`
 }
